force-app/main/default/objects/sked__Job_Product__c/sked__Job_Product__c.object-meta.xml
<CustomObject>
    <label>Job Product</label>
    <nameField>
        <displayFormat>JP-{00000}</displayFormat>
        <label>Job Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>