force-app/main/default/objects/sked__Job_Product__c/fields/sked__Product__c.field-meta.xml
<CustomField>
    <fullName>sked__Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Job Products</relationshipLabel>
    <relationshipName>Job_Products</relationshipName>
    <type>Lookup</type>
</CustomField>