force-app/main/default/objects/sked__Job_Product__c/fields/sked__Product_Name__c.field-meta.xml
<CustomField>
    <fullName>sked__Product_Name__c</fullName>
    <description>Name of the adjoining product</description>
    <formula>sked__Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>